<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.laggerlimited.shoestore.instruction.InstructionFragment">
    <!--ScrollView is used for smaller screens to display the fragment uniformly-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <!--ConstraintLayout is used for versatility and screen changes-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/instructionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200">

            <TextView
                android:id="@+id/instructionTitleTextView"
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.12" />

            <Button
                android:id="@+id/shoeListButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructionInfoTextView"
                app:layout_constraintVertical_bias="0.85" />

            <TextView
                android:id="@+id/instructionListTextView"
                android:layout_width="@dimen/instruction_list_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/instruction_list_margin_top"
                android:fontFamily="@font/audiowide"
                android:text="@string/instruction_list"
                android:textAlignment="center"
                android:textSize="@dimen/instruction_list_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructionTitleTextView" />

            <TextView
                android:id="@+id/instructionInfoTextView"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/instruction_info_margin_top"
                android:text="@string/instruction_info"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructionListTextView"
                app:layout_constraintVertical_bias="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>